k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adm
  labels:
    app.kubernetes.io/name: adm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adm
  ports:
    - name: http
      port: 80
      targetPort: http
